cleaned some stuff, fixed some compiler warnings